Fix T42767: Subsurfacing union boolean with same-named UVs crashes Blender

Was own mistake in handling custom data layers in boolean modifier.

Campbell, do you mind double-checking if it's all correct?